# LLVM-Mini-Compiler

./: CMakeLists.txt  README.md
include/: ast.h  lexer.h
src/: main.cpp  parser.cpp
test/: input.toy
